Changes to responsive design code - improve alignment of footer by removing padding and change of div element in travel page width to ensure contents aren't hidden on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 400;
 }
 
@@ -149,7 +149,7 @@ iframe {
 footer {
      height: 100px;
      width: 100%;
-     padding: 15px; 
+     padding: 15px;
      text-align: center;
 }
 
@@ -291,7 +291,7 @@ Code taken from inspiration from https://www.w3schools.com/css/css_image_transpa
 /* styling of text on travel advice page and div element */
 
 #travel-text {
-    font-size: 1.9em;
+    font-size: 1.9em; 
     color: white;
     background-color: black;
     opacity: 0.85;
@@ -304,7 +304,8 @@ Code taken from inspiration from https://www.w3schools.com/css/css_image_transpa
 #travel-text>h2 {
     text-decoration: underline;
     padding: 15px;
-}
+    font-size: 1.7em;
+} 
 
 /* Addition of image background for form on newsletter page. 
 Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-1540372/ */
@@ -395,6 +396,9 @@ label {
         font-size: 2em;
     }
 
+    #travel-container {
+        width: auto;
+    }
 
     label {
         font-size: 0.85em; 
@@ -423,6 +427,10 @@ label {
 
     #travel-text {
         font-size: 1.8em;
+    }
+
+    footer {
+        padding: 0;
     }
 }
 
@@ -583,12 +591,12 @@ label {
     }
 
     #form-text-container {
-        font-size: 1em;
+        font-size: 16px;
         height: auto;
     }
 
-    #form-text-container {
-        font-size: 25px;
+    label {
+        display: block;
     }
 
 }
@@ -603,7 +611,7 @@ label {
 }
 
 
-@media screen and (max-width: 370px) {
+@media screen and (max-width: 373px) {
 
     h1 {
         font-size: 1em;
@@ -629,7 +637,7 @@ label {
     }   
 
     h2 {
-        font-size: 1em;
+        font-size: 20px;
     }
 
     h3 {
@@ -701,36 +709,25 @@ label {
         padding: 10px;
     }
 
-    #travel-container {
-        width: 100%;
-        margin: 0 auto;
-    }
-
-    label {
-        display: inline-block;
-        font-size: 0.7em;
-        text-align: left;
-        clear: both;
-        column-count: 1;
-    }
 
     #newsletter-form {
         margin-left: 10px;
+    }
+
+    label {
+        font-size: 18px;
     }
 
     .signup-button {
         margin-left: auto;
     }
 
-    #form-text-container {
-        font-size: 1.5em;
-        height: auto;
-    }
-
 }
 
 @media screen and (max-width: 280px) {
+    
     h1 {
         font-size: 0.9em;
     }
+
 }
